<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_processor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="u202443422@xs.ustb.edu.cn">r</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
   <depend>opencv2</depend>
   <depend>eigen3</depend>
   


  <depend>csv_publisher</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
<exec_depend>rosidl_default_runtime</exec_depend>

 <!-- 声明该包是消息接口包（必须添加） -->
<member_of_group>rosidl_interface_packages</member_of_group>
  <!-- 新增：OpenCV依赖 -->
 
  <depend>cv_bridge</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
